Add history api endpoints
